fixed the spacing problem.  line-hight was the culprit.  Put in fonts more consistent with the Kiwanis Intl website.

--- a/css/dundonAdditions.css
+++ b/css/dundonAdditions.css
@@ -1,5 +1,8 @@
+@import url("https://cloud.typography.com/655080/6542352/css/fonts.css");
+
 * {
   box-sizing: border-box;
+	font-family: "avenirregular", Ariel, sans-serif;
 }
 
 #title-header {
@@ -12,17 +15,18 @@
   background-size: cover; /* Resize the background image to cover the entire container */
 	margin: 0;
 	padding: 0;
-	border: 0;
+	border: 1px solid blue;
 }
 
 #main-title {
+	font-family: "avenirbold", Ariel Bold, sans-serif
 	box-sizing: border-box;
 	font-size: 400%;
 	margin-top: 0;
 	margin-bottom: 0;
-	padding-top: 0;
-	padding-bottom: 0;
+	padding: 0;
 	border: 0;
+	line-height: 95%;
 }
 
 .main-subtitle {
@@ -30,7 +34,9 @@
 	font-size: 150%;
 	margin-top: 0;
 	margin-bottom: 0;
+	margin-left: 5px;
 	padding-top: 0;
 	padding-bottom: 0;
 	border: 0;
+	line-height: 95%;
 }
